# bspline-solver

./: .gitignore  LICENSE  README.md  beam_bucking.py  beam_buckling.py  demo.py  double_well.py  hanging_chain.py  henon_heiles.py  isoperimetric.py  kepler.py  kepler_1.py  kepler_2.py  kepler_3.py  pyproject.toml
bspline_solver/: __init__.py  config.py  datasets.py  diagnostic.py  experiment.py  ground_truth.py  lagrangian.py  problem_factories.py  regularization.py  solver.py  spline.py  visualization.py
bspline_solver/data/: __init__.py  basic.py  kepler_orbit_1.py
examples/: _figures.py  beam_buckling.py  hanging_chain.py  henon_heiles.py  isoperimetric.py  kepler_1.py  kepler_2.py  kepler_3.py  polynomial_channel.py
figures/: README.md
tests/: __init__.py  test_workflow.py
