[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bspline-solver"
version = "0.1.0"
description = "Variational B-spline interpolation for physics-informed boundary-value problems."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Shuheng Li" },
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.11",
]

[project.urls]
Homepage = "https://github.com/lshuheng/bspline-solver"
Issues = "https://github.com/lshuehng/bspline-solver/issues"

[tool.setuptools.packages.find]
include = ["bspline_solver*"]
